--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_alignParentRight="true"
         android:text="@string/hello_world" />
 
-    <com.owenyi.menuback.myButton
+    <Button
         android:id="@+id/activeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
